// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CozyClient queryAll should call \`query\` until there is no more document to query 1`] = `
Array [
  Object {
    "_id": "0",
    "label": "Shopping",
  },
  Object {
    "_id": "1",
    "label": "Laundry",
  },
  Object {
    "_id": "2",
    "label": "Cook",
  },
  Object {
    "_id": "3",
    "label": "Rest",
  },
]
`;

exports[`CozyClient queryAll should use offsetBookmark when a bookmark is in the query result 1`] = `
Array [
  Object {
    "_id": "0",
    "label": "Shopping",
  },
  Object {
    "_id": "1",
    "label": "Laundry",
  },
]
`;

exports[`CozyClient serialization should be snapshotted in a simplified format 1`] = `
CozyClient {
  "uri": "http://localhost:8080",
}
`;
